allure report + screenshots

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.36.2",
+    "allure-playwright": "^2.5.0",
     "playwright-core": "^1.36.2"
   },
   "dependencies": {
