--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,12 @@ name: Playwright Tests
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - '**/README.md'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - '**/README.md'
 jobs:
   test:
     timeout-minutes: 60
