--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: Playwright Tests
 on:
+  workflow_dispatch:
   push:
     branches: [main]
     paths-ignore:
@@ -7,7 +8,8 @@ on:
   pull_request:
     branches: [main]
     paths-ignore:
-      - '**/README.md'
+      - '**/*.md'
+      - '**/ci.yml'
 jobs:
   test:
     timeout-minutes: 60
