--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,10 @@ jobs:
             playwright-report/
             allure-results/
           retention-days: 30
+      - uses: dev-drprasad/delete-older-releases@v0.2
+        with:
+          repo: krishnapollu/playwright-nodejs-poc # defaults to current repo
+          keep_latest: 3
+          delete_tag_pattern: "" # defaults to ""
+        env:
+          GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
