--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ on:
     paths-ignore:
       - '**/*.md'
       - '**/ci.yml'
+permissions:
+      contents: 'read'
+      id-token: 'write'
 jobs:
   test:
     timeout-minutes: 60
