--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
       - '**/*.md'
       - '**/ci.yml'
 permissions:
-      contents: 'read'
+      contents: 'write'
       id-token: 'write'
 jobs:
   test:
