--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,22 +36,30 @@ jobs:
             playwright-report/
             allure-results/
           retention-days: 30
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-      # - name: Upload artifact
-      #   uses: actions/upload-pages-artifact@v1
-      #   with:
-      #     path: test-merge-report-demo/
-      # - name: Deploy to GitHub Pages
-      #   id: deployment
-      #   uses: actions/deploy-pages@v1
-
-      - name: Deploy to GitHub Pages
+      - name: Get test results history
+        uses: actions/checkout@v3
         if: always()
-        uses: crazy-max/ghaction-github-pages@v3
+        continue-on-error: true
         with:
-          target_branch: gh-pages
-          build_dir: playwright-report/
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          ref: gh-pages
+          path: gh-pages
+      - name: Test marketplace action
+        uses: PavanMudigonda/html-reporter-github-pages@v1.0
+        id: test-report
+        with:
+          test_results: playwright-report
+          gh_pages: gh-pages
+          results_history: results-history
+      - name: Publish Github Pages
+        if: ${{ always() }}
+        uses: peaceiris/actions-gh-pages@v3.8.0
+        with:
+          github_token: ${{ secrets.DEPLOY_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: results-history
+          keep_files: true 
+      - name: GH Pages Push
+        uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
+        with:
+          test_results: test-results
+          keep_reports: 20
