--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
             playwright-report/
             allure-results/
           retention-days: 30
+          
       - name: Get test results history
         uses: actions/checkout@v3
         if: always()
@@ -58,8 +59,8 @@ jobs:
           publish_branch: gh-pages
           publish_dir: results-history
           keep_files: true 
-      - name: GH Pages Push
-        uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
-        with:
-          test_results: test-results
-          keep_reports: 20
+      # - name: GH Pages Push
+      #   uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
+      #   with:
+      #     test_results: test-results
+      #     keep_reports: 20
