--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           gh_pages: gh-pages
           results_history: results-history
       - name: Publish Github Pages
-        if: ${{ always() }}
+        if: always()
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
           github_token: ${{ secrets.DEPLOY_TOKEN }}
