--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@axe-core/playwright": "^4.7.3",
     "@playwright/test": "^1.36.2",
     "allure-playwright": "^2.5.0",
-    "playwright-core": "^1.36.2"
+    "playwright-core": "^1.36.2",
+    "winston": "^3.10.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
