--- a/.github/workflows/playwright-service-ci.yml
+++ b/.github/workflows/playwright-service-ci.yml
@@ -1,15 +1,15 @@
-name: Playwright Tests
+name: Playwright Service Tests
 on:
   workflow_dispatch:
   push:
-    branches: [ ]
+    branches: [main]
     paths-ignore:
       - '**/README.md'
   pull_request:
-    branches: [ ]
+    branches: [main]
     paths-ignore:
       - '**/*.md'
-      - '**/ci.yml'
+      - '**/*ci.yml'
 permissions:
       contents: 'write'
       id-token: 'write'
@@ -24,10 +24,14 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm install
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+      # - name: Install Playwright Browsers
+      #   run: npx playwright install --with-deps
+      - name: Set playwright access token
+        run: export PLAYWRIGHT_SERVICE_ACCESS_TOKEN = ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
+      - name: Set Playwright region endpoint
+        run: export PLAYWRIGHT_SERVICE_URL = ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --config=playwright.service.config.ts --workers=20
       - uses: actions/upload-artifact@v3
         if: always()
         with:
