--- a/.github/workflows/playwright-service-ci.yml
+++ b/.github/workflows/playwright-service-ci.yml
@@ -26,10 +26,11 @@ jobs:
         run: npm install
       # - name: Install Playwright Browsers
       #   run: npx playwright install --with-deps
-      - name: Set playwright access token
-        run: export PLAYWRIGHT_SERVICE_ACCESS_TOKEN = ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
-      - name: Set Playwright region endpoint
-        run: export PLAYWRIGHT_SERVICE_URL = ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
+        env:
+          # Access token and regional endpoint for Microsoft Playwright Testing
+          PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
+          PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
+          PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
       - name: Run Playwright tests
         run: npx playwright test --config=playwright.service.config.ts --workers=20
       - uses: actions/upload-artifact@v3
