--- a/.github/workflows/playwright-service-ci.yml
+++ b/.github/workflows/playwright-service-ci.yml
@@ -1,15 +1,15 @@
 name: Playwright Service Tests
 on:
   workflow_dispatch:
-  push:
-    branches: [main]
-    paths-ignore:
-      - '**/README.md'
-  pull_request:
-    branches: [main]
-    paths-ignore:
-      - '**/*.md'
-      - '**/*ci.yml'
+  # push:
+  #   branches: [main]
+  #   paths-ignore:
+  #     - '**/README.md'
+  # pull_request:
+  #   branches: [main]
+  #   paths-ignore:
+  #     - '**/*.md'
+  #     - '**/*ci.yml'
 permissions:
       contents: 'write'
       id-token: 'write'
@@ -32,7 +32,7 @@ jobs:
           PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
           PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
       - name: Run Playwright tests
-        run: npx playwright test --config=playwright.service.config.ts --workers=20
+        run: npx playwright test --config=playwright.service.config.ts --workers=20 && true
       - uses: actions/upload-artifact@v3
         if: always()
         with:
